Refactor tests.
Signed-off-by: Greg Allen <gallen@redhat.com>